<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#f5f5f5"
    >
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/white"
        android:id="@+id/message_ll"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--基本信息-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

          <View
              android:layout_margin="@dimen/dp_10"
              android:background="@color/colorPrimary"
              android:layout_width="@dimen/dp_5"
              android:layout_height="@dimen/dp_20"/>

            <TextView
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/sp_14"
                android:text="基本信息"
                android:textColor="#1a1a1a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <View style="@style/activity_register_v_horizontal_divider" />

        <!--客户所有人-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/activity_customer_create_tv_style2"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/sex" />

                <TextView
                    android:id="@+id/et_sex"
                    style="@style/activity_customer_create_et_style"
                    android:enabled="false"
                    android:maxLength="25" />

            </LinearLayout>

        </RelativeLayout>

        <View style="@style/activity_register_v_horizontal_divider" />
        <!--客户名称-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/activity_customer_create_tv_style2"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/et_address"
                    style="@style/activity_customer_create_et_style"
                    android:enabled="false"
                    android:maxLines="2"
                    />

            </LinearLayout>


        </RelativeLayout>

        <View style="@style/activity_register_v_horizontal_divider" />

        <!--手机号-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/activity_customer_create_tv_style2"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/customer_mobile" />

                <TextView
                    android:id="@+id/et_customer_mobile"
                    style="@style/activity_customer_create_et_style"
                    android:enabled="false"
                    android:maxLength="25"/>

            </LinearLayout>

        </RelativeLayout>

        <View style="@style/activity_register_v_horizontal_divider" />



        <!--其他信息-->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_margin="@dimen/dp_10"
                android:background="@color/colorPrimary"
                android:layout_width="@dimen/dp_5"
                android:layout_height="@dimen/dp_20"/>

            <TextView
                android:textColor="#1a1a1a"
                android:textSize="@dimen/sp_14"
                android:layout_gravity="center_vertical"
                android:text="线索信息"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <View style="@style/activity_register_v_horizontal_divider" />

        <!--客户所有人-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/activity_customer_create_tv_style2"
                    android:layout_width="@dimen/dp_120"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/source" />

                <TextView
                    style="@style/activity_customer_create_et_style"
                    android:id="@+id/source"
                    android:enabled="false"
                    android:maxLength="25" />

            </LinearLayout>

        </RelativeLayout>

        <View style="@style/activity_register_v_horizontal_divider" />
        <!--创建日期-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/activity_customer_create_tv_style2"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/xiansuo_detail" />

                <TextView
                    android:id="@+id/xiansuo_detail"
                    style="@style/activity_customer_create_et_style"
                    android:enabled="false"
                    android:maxLines="2"
                    android:ellipsize="end"
                    />

            </LinearLayout>


        </RelativeLayout>

        <View style="@style/activity_register_v_horizontal_divider" />

        <!--最新修改日-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/activity_customer_create_tv_style2"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/fuzeren" />

                <TextView
                    android:id="@+id/edit_fuzeren"
                    style="@style/activity_customer_create_et_style"
                    android:enabled="false"
                    android:maxLength="25"/>

            </LinearLayout>


        </RelativeLayout>

        <View style="@style/activity_register_v_horizontal_divider" />

        <!--最新修改人-->
        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/dp_48">-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="@dimen/dp_48"-->
                <!--android:gravity="center_vertical"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--style="@style/activity_customer_create_tv_style2"-->
                    <!--android:layout_marginLeft="@dimen/dp_15"-->
                    <!--android:text="@string/beizhu" />-->

                <!--<TextView-->
                    <!--android:id="@+id/beizhu"-->
                    <!--style="@style/activity_customer_create_et_style"-->
                    <!--android:enabled="false"-->
                    <!--android:maxLines="2"-->
                    <!--android:ellipsize="end"-->
                    <!--/>-->

            <!--</LinearLayout>-->


        <!--</RelativeLayout>-->

        <!--<View style="@style/activity_register_v_horizontal_divider" />-->



    </LinearLayout>


</RelativeLayout>
</android.support.v4.widget.NestedScrollView>